src/main/metadata/objects/MD_Dependency__mdt.object
<CustomObject>
    <description>This metadata type has been created to keep dependency picklist values - vf 10limit error</description>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <label>Controlling Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependency_Values__c</fullName>
        <label>Dependency Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketName__c</fullName>
        <label>MarketName</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_APIName__c</fullName>
        <label>Object APIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MD Dependency</label>
    <pluralLabel>MD Dependencies</pluralLabel>
</CustomObject>